--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>HTTP Server in C</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <!-- <h1>Hello, World!</h1> -->
+    <h1>Ready, Set, Go!</h1>
   </body>
 </html>
