--- a/index.html
+++ b/index.html
@@ -1,9 +1,236 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>HTTP Server in C</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WSC | Raw C Power</title>
+    <style>
+      :root {
+        --bg-color: #0a0a0a;
+        --card-bg: #161616;
+        --text-main: #ffffff;
+        --text-muted: #888888;
+        --accent: #00ff88; /* Cyber Green */
+        --accent-glow: rgba(0, 255, 136, 0.2);
+        --font-mono: "SF Mono", "Fira Code", "Courier New", monospace;
+        --font-sans: system-ui, -apple-system, sans-serif;
+      }
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border_box;
+      }
+
+      body {
+        background-color: var(--bg-color);
+        color: var(--text-main);
+        font-family: var(--font-sans);
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        background-image: radial-gradient(
+          circle at 50% 50%,
+          #1a1a1a 1px,
+          transparent 1px
+        );
+        background-size: 30px 30px;
+      }
+
+      .container {
+        max-width: 800px;
+        width: 90%;
+        text-align: center;
+        z-index: 10;
+      }
+
+      .status-badge {
+        display: inline-flex;
+        align-items: center;
+        padding: 8px 16px;
+        background: rgba(0, 255, 136, 0.1);
+        border: 1px solid rgba(0, 255, 136, 0.2);
+        border-radius: 50px;
+        color: var(--accent);
+        font-family: var(--font-mono);
+        font-size: 0.9rem;
+        margin-bottom: 2rem;
+        box-shadow: 0 0 15px var(--accent-glow);
+        animation: float 3s ease-in-out infinite;
+      }
+
+      .status-dot {
+        width: 8px;
+        height: 8px;
+        background-color: var(--accent);
+        border-radius: 50%;
+        margin-right: 10px;
+        box-shadow: 0 0 10px var(--accent);
+        animation: pulse 2s infinite;
+      }
+
+      h1 {
+        font-size: 5rem;
+        font-weight: 800;
+        letter-spacing: -2px;
+        line-height: 1;
+        margin-bottom: 1rem;
+        background: linear-gradient(to right, #fff, #888);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      p.subtitle {
+        font-family: var(--font-mono);
+        color: var(--text-muted);
+        font-size: 1.2rem;
+        margin-bottom: 3rem;
+      }
+
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 20px;
+        margin-top: 3rem;
+      }
+
+      .card {
+        background: var(--card-bg);
+        padding: 2rem;
+        border-radius: 12px;
+        border: 1px solid #333;
+        transition: all 0.3s ease;
+        text-align: left;
+      }
+
+      .card:hover {
+        border-color: var(--accent);
+        transform: translateY(-5px);
+        box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.5);
+      }
+
+      .card h3 {
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+        color: var(--text-main);
+      }
+
+      .card p {
+        font-size: 0.9rem;
+        color: var(--text-muted);
+        line-height: 1.5;
+      }
+
+      /* Animations */
+      @keyframes pulse {
+        0% {
+          opacity: 1;
+          transform: scale(1);
+        }
+        50% {
+          opacity: 0.5;
+          transform: scale(1.2);
+        }
+        100% {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
+
+      @keyframes float {
+        0% {
+          transform: translateY(0px);
+        }
+        50% {
+          transform: translateY(-10px);
+        }
+        100% {
+          transform: translateY(0px);
+        }
+      }
+
+      /* Terminal effect cursor */
+      .cursor {
+        display: inline-block;
+        width: 10px;
+        height: 1.2rem;
+        background-color: var(--accent);
+        margin-left: 5px;
+        animation: blink 1s infinite;
+        vertical-align: middle;
+      }
+
+      @keyframes blink {
+        0%,
+        100% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0;
+        }
+      }
+
+      @media (max-width: 600px) {
+        h1 {
+          font-size: 3rem;
+        }
+      }
+    </style>
   </head>
   <body>
-    <!-- <h1>Hello, World!</h1> -->
-    <h1>Ready, Set, Go!</h1>
+    <div class="container">
+      <div class="status-badge">
+        <span class="status-dot"></span>
+        Server Status: Operational
+      </div>
+
+      <h1>WSC SERVER</h1>
+      <p class="subtitle">
+        Running on <span id="typed-text"></span><span class="cursor"></span>
+      </p>
+
+      <div class="grid">
+        <div class="card">
+          <h3>⚡ Blazing Fast</h3>
+          <p>
+            Written in pure C using native pthreads and raw socket management.
+          </p>
+        </div>
+        <div class="card">
+          <h3>🧠 Memory Safe</h3>
+          <p>Custom allocation handling with zero-copy parsing techniques.</p>
+        </div>
+        <div class="card">
+          <h3>🛠 Antirez Style</h3>
+          <p>Pragmatic design, linear logic, and readable implementation.</p>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      // Effetto macchina da scrivere
+      const textToType = "pthreads & raw sockets.";
+      const typeContainer = document.getElementById("typed-text");
+      let index = 0;
+
+      function type() {
+        if (index < textToType.length) {
+          typeContainer.textContent += textToType.charAt(index);
+          index++;
+          setTimeout(type, 100); // Velocità di scrittura
+        }
+      }
+
+      // Simula un caricamento istantaneo
+      window.onload = function () {
+        setTimeout(type, 500);
+        console.log(
+          "%c WSC SERVER CONNECTED ",
+          "background: #00ff88; color: #000; font-weight: bold; padding: 5px;",
+        );
+      };
+    </script>
   </body>
 </html>
